tests/errors/delocal-wrong-value.ja
procedure main()
    local   int x = 0
    skip
    delocal int x = 1
